全局异常处理,加入打包工具.